--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <h1>純屬虛構</h1>
+    <h1 class="text-center">純屬虛構 - 借貸 投資賺錢的開始 破產的開始</h1>
     <div class="container-fluid p-0">
         <div class="row g-0">
             <div class="col-12">
